2009-11-19  Chong Yidong  <cyd@stupidchicken.com>

	* mail/sendmail.el (mail-yank-prefix): Change default to "> ".
	(mail-signature): Change default to t.
	(mail-from-style): Deprecate `system-default' value.
	(mail-insert-from-field): For default value of mail-from-style,
	default to `angles' unless `angles' needs quoting and `parens'
	does not.
	(mail-citation-prefix-regexp): Use citation regexp from
	message-mode.

2009-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
	variables for computing the prompt for reading password.

2009-11-19  Glenn Morris  <rgm@gnu.org>

	* dired-aux.el (dired-compress-file-suffixes): Add ".xz".  (Bug#4953)

	* textmodes/flyspell.el (sgml-lexical-context): Declare.

	* net/newst-treeview.el (newsticker-treeview-treewindow-width)
	(newsticker-treeview-listwindow-height): Fix custom type.

2009-11-19  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char-padded-string): Compose with TAB
	only if there's a font for CH.
	(describe-char): Fix the condition for detecting a trivial
	composition.

2009-11-18  Nathaniel Flath  <flat0103@gmail.com>

	* progmodes/cc-menus.el (cc-imenu-java-generic-expression): A new,
	more accurate version of the regexp.  (Bug#3910)

2009-11-18  Bernhard Herzog  <bernhard.herzog@intevation.de>  (tiny change)

	* vc-hg.el (vc-hg-diff): Fix last patch: do not change directory.

2009-11-18  Juanma Barranquero  <lekktu@gmail.com>

	* font-setting.el (font-use-system-font): Declare for byte-compiler.
	(font-setting-change-default-font): Fix typo in docstring.

2009-11-18  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-defs.el (c-version): Bump to 5.31.8.

2009-11-17  Jan Djärv  <jan.h.d@swipnet.se>

	* font-setting.el (font-use-system-font): Moved ...

	* cus-start.el (all): ... to here.

2009-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-file-expand-wildcards): Simplify.